--- a/app/src/pages/channel/channel.css
+++ b/app/src/pages/channel/channel.css
@@ -110,4 +110,14 @@
     justify-content: flex-end;
     gap: 10px;
 }
-
+.profilePicChannel {
+    width: 200px;
+    height: 200px;
+    border-radius: 50%;
+    object-fit: cover;
+    position: absolute;
+    left: 0;
+    right: 0;
+    margin: auto;
+    top: 200px;
+}
