Update channel form styling

--- a/app/src/pages/profile/profile.css
+++ b/app/src/pages/profile/profile.css
@@ -34,9 +34,7 @@
     top: 200px;
 }
 
-.profileContainerProfile{
-    padding: 20px 70px;
-}
+
 
 .uInfoProfile{
     height: 180px;
@@ -51,6 +49,7 @@
     align-items: center;
     justify-content: space-between;
     margin-bottom: 20px;
+    margin-top: 20px;
 }
 
 .leftProfile{
