--- a/app/src/components/navbar/navbar.css
+++ b/app/src/components/navbar/navbar.css
@@ -1,4 +1,4 @@
-.Navbar{
+.Navbar {
     display: flex;
     justify-content: space-between;
     align-items: center;
@@ -8,34 +8,36 @@
     background-color: white;
 }
 
-.leftside{
+.leftside {
     display: flex;
     align-items: center;
-    padding : 10px 20px;
+    padding: 10px 20px;
     gap: 30px;
+
     @media (max-width: 480px) {
         gap: 10px;
-    }   
+    }
 }
 
-.leftside2{
+.leftside2 {
     display: flex;
     align-items: center;
-    padding : 10px 20px;
+    padding: 10px 20px;
+
     @media (max-width: 480px) {
         padding: 10px 0px;
     }
 
 }
 
-.leftside img{
+.leftside img {
     width: 100px;
     height: 30px;
-    
-    object-fit:fill;
+
+    object-fit: fill;
 }
 
-.search{
+.search {
     display: flex;
     align-items: center;
     gap: 10px;
@@ -44,27 +46,27 @@
     padding: 5px;
 }
 
-.rightside{
+.rightside {
     display: flex;
     align-items: center;
-    padding : 10px 20px;
+    padding: 10px 20px;
     gap: 20px;
 }
 
-.user{
+.user {
     display: flex;
     align-items: center;
     gap: 10px;
 }
 
-.user img{
+.user img {
     width: 30px;
     height: 30px;
     border-radius: 50%;
     object-fit: cover;
 }
 
-.leftside span{
+.leftside span {
     margin-left: 10px;
     font-weight: bold;
     font-size: large;
@@ -72,19 +74,49 @@
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
 }
 
-.rightside span{
+.rightside span {
     font-weight: 500;
-    
+
 }
 
-.search input{
+.search input {
     border: none;
-    
+
     width: 500px;
-    
+
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
 
     @media (max-width: 480px) {
         display: none;
+    }
+}
+
+.dropdown {
+
+    .dropdownrow {
+        margin: 30px 0px;
+        display: flex;
+        justify-content: space-between;
+        gap: 20px;
+
+        img {
+            width: 40px;
+            height: 40px;
+            border-radius: 50%;
+            object-fit: cover;
+        }
+
+        .info {
+            flex: 5;
+            display: flex;
+            flex-direction: column;
+            gap: 3px;
+            align-items: flex-start;
+
+            span {
+                font-weight: 500;
+            }
+
+        }
     }
 }
