--- a/app/src/components/navbar/navbar.css
+++ b/app/src/components/navbar/navbar.css
@@ -91,32 +91,30 @@
     }
 }
 
-.dropdown {
 
-    .dropdownrow {
-        margin: 30px 0px;
-        display: flex;
-        justify-content: space-between;
-        gap: 20px;
+.dropdownrow{
+    margin: 30px 0px;
+    display: flex;
+    justify-content: space-between;
+    gap: 20px;
+}
 
-        img {
-            width: 40px;
-            height: 40px;
-            border-radius: 50%;
-            object-fit: cover;
-        }
+.dropdown img{
+    width: 40px;
+    height: 40px;
+    border-radius: 50%;
+    object-fit: cover;
+}
 
-        .info {
-            flex: 5;
-            display: flex;
-            flex-direction: column;
-            gap: 3px;
-            align-items: flex-start;
+.info{
+    flex: 5;
+    display: flex;
+    flex-direction: column;
+    gap: 3px;
+    align-items: flex-start;
 
-            span {
-                font-weight: 500;
-            }
+}
 
-        }
-    }
+.info span{
+    font-weight: 500;
 }
