--- a/app/src/components/channelpopupcreate/channelpopupcreate.css
+++ b/app/src/components/channelpopupcreate/channelpopupcreate.css
@@ -23,6 +23,7 @@ body.active-modal {
   
   .overlay {
     background: rgba(49,49,49,0.8);
+    backdrop-filter: blur(5px);
   }
   .modal-content {
     position: absolute;
