--- a/app/src/pages/home/home.css
+++ b/app/src/pages/home/home.css
@@ -1,9 +1,12 @@
 .home{
+    flex: 3;
+    position: sticky;
+    top: 71px;   
+    height: calc(100vh - 71px);
+    overflow: scroll;
     background-color: #f5f5f5;
-    height: 100%;
-    width: 100%;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
+    &::-webkit-scrollbar{
+        display: none;
+    }
     
 }
