--- a/app/src/components/share/share.css
+++ b/app/src/components/share/share.css
@@ -11,6 +11,8 @@
     margin-left: 30px;
     margin-right: 30px;
     margin-top:20px;
+    justify-content: center;
+        align-items: center;
     
 }
 
@@ -109,10 +111,9 @@
 }
 
 .middleShare img{
-    width: 100%;
-    object-fit: cover;
-    margin-top: 20px;
-    height: 100%;
-    max-height: 500px;
-    border-radius: 0%;
-}
+    max-width: 700px;
+        max-height: 400px;
+        object-fit: contain;
+        border-radius: 0%;
+    }
+
